--- a/api/package.json
+++ b/api/package.json
@@ -21,9 +21,11 @@
   "homepage": "https://github.com/twoabd/CompressioWeb#readme",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.0.0",
     "express": "^4.17.1",
     "find-remove": "^3.1.0",
     "formidable": "^1.2.2",
+    "morgan": "^1.10.0",
     "path": "^0.12.7",
     "uuid": "^8.3.2",
     "validator": "^13.6.0"
